--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "config",
     "prettier"
   ],
+  "homepage": "https://github.com/pauloelias/eslint-config-pelias",
   "main": "index.js",
   "repository": "git@github.com:pauloelias/eslint-config-pelias.git",
-  "author": "Paulo Elias <paulo@pauloelias.com>",
+  "author": {
+    "email": "paulo@pauloelias.com",
+    "name": "Paulo Elias",
+    "url": "https://pauloelias.com/"
+  },
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -38,20 +43,6 @@
     "prettier": "^1.17.0"
   },
   "peerDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-jsx": "^6.0.2",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.17.0"
+    "eslint": ">=5"
   }
 }
