--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "config",
     "prettier"
   ],
-  "homepage": "https://github.com/pauloelias/eslint-config-pelias",
-  "main": "index.js",
-  "repository": "git@github.com:pauloelias/eslint-config-pelias.git",
   "author": {
     "email": "paulo@pauloelias.com",
     "name": "Paulo Elias",
     "url": "https://pauloelias.com/"
   },
+  "homepage": "https://github.com/pauloelias/eslint-config-pelias",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pauloelias/eslint-config-pelias"
+  },
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=8.0"
+  },
+  "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -43,6 +49,7 @@
     "prettier": "^1.17.0"
   },
   "peerDependencies": {
-    "eslint": ">=5"
+    "eslint": "^5",
+    "prettier": "^1"
   }
 }
